v 0.0.2 -добавлены регистрация и аутентификация
