# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Программа для обучения REST API",
+        "description": "REST API Training Program",
         "title": "REST_API_ZAK",
         "contact": {},
         "version": "0.0.1"
@@ -11,6 +11,11 @@
     "paths": {
         "/api/user": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a new user with the provided JSON data",
                 "tags": [
                     "user"
@@ -39,19 +44,18 @@
                         "schema": {
                             "$ref": "#/definitions/handler.errorResponse"
                         }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
                     }
                 }
             }
         },
         "/api/user/check/{id}": {
             "get": {
-                "description": "Check if a user with the provided ID exists",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "CheckById if a user with the provided ID exists",
                 "consumes": [
                     "application/json"
                 ],
@@ -61,7 +65,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Check if a user exists",
+                "summary": "CheckById if a user exists",
                 "parameters": [
                     {
                         "type": "integer",
@@ -90,19 +94,18 @@
                         "schema": {
                             "$ref": "#/definitions/handler.errorResponse"
                         }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
                     }
                 }
             }
         },
         "/api/user/get_all": {
             "get": {
-                "description": "Get a list of all users with their IDs",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "GetById a list of all users with their IDs",
                 "consumes": [
                     "application/json"
                 ],
@@ -112,7 +115,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Get a list of all users",
+                "summary": "GetById a list of all users",
                 "responses": {
                     "200": {
                         "description": "List of user IDs",
@@ -134,7 +137,12 @@
         },
         "/api/user/{id}": {
             "get": {
-                "description": "Get a user with the provided JSON data",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "GetById a user with the provided JSON data",
                 "consumes": [
                     "application/json"
                 ],
@@ -144,7 +152,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Get a user",
+                "summary": "GetById a user",
                 "parameters": [
                     {
                         "type": "integer",
@@ -171,6 +179,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete a user with the provided ID",
                 "consumes": [
                     "application/json"
@@ -204,9 +217,95 @@
                         "schema": {
                             "$ref": "#/definitions/handler.errorResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/auth/sign-in": {
+            "post": {
+                "description": "Authenticates the user and returns the access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User authentication",
+                "parameters": [
+                    {
+                        "description": "User authentication data",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.signInInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful authentication, returns the access token",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Validation error or incorrect data",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/sign-up": {
+            "post": {
+                "description": "Registers a new user and returns his ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Registering a new user",
+                "parameters": [
+                    {
+                        "description": "New user's data",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UserExampleRegistration"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A user with the specified ID has been successfully created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Validation error or incorrect data",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/handler.errorResponse"
                         }
@@ -224,6 +323,23 @@
                 }
             }
         },
+        "handler.signInInput": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "qwerty"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "ZAK"
+                }
+            }
+        },
         "handler.statusResponse": {
             "type": "object",
             "properties": {
@@ -234,6 +350,10 @@
         },
         "model.User": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "id": {
                     "type": "integer",
@@ -242,8 +362,40 @@
                 "name": {
                     "type": "string",
                     "example": "ZAK"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "qwerty"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "ZAK"
                 }
             }
+        },
+        "model.UserExampleRegistration": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "qwerty"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "ZAK"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
